# gioco1

./: CMakeLists.txt  CREATIVE-COMMONS-BY  GiocoConfig.kcfgc  Messages.sh  README  gioco1.cpp  gioco1.h  gioco1.kcfg  hisc-app-gioco1.svgz  passwordsetup.cpp  passwordsetup.h  passwordsetup.ui  plasma-applet-gioco1.desktop
utils/: mkplasmoidtestingdirs  plasmoid_development.rc.sh
